add fitness over time to 2022-03-07 analysis

--- a/experiments/2022-03-07-variable-mut/analysis/2022-03-07-variable-mut.Rmd
+++ b/experiments/2022-03-07-variable-mut/analysis/2022-03-07-variable-mut.Rmd
@@ -161,8 +161,8 @@ ggsave(
 
 ```{r}
 ggplot(
-    # time_series_data,
-    filter(time_series_data, update>250000),
+    time_series_data,
+    # filter(time_series_data, update>250000),
     aes(
       x=update,
       y=avg_fitness,
