cleanup, update 2022-03-07 r markdown analyses

--- a/experiments/2022-03-07-variable-mut/analysis/2022-03-07-variable-mut-landscaping.Rmd
+++ b/experiments/2022-03-07-variable-mut/analysis/2022-03-07-variable-mut-landscaping.Rmd
@@ -45,6 +45,50 @@ ls1_run_summary_data$env_condition <- as.factor(
 ls1_run_summary_data$env_type <- as.factor(
   ls1_run_summary_data$env_type
 )
+
+get_env_chg_rate_label <- function(env_chg_rate, env_type) {
+  if (env_chg_rate == "none" && env_type=="consta") {
+    return("none-a")
+  } else if (env_chg_rate == "none" && env_type=="constb") {
+    return("none-b")
+  } else if (env_chg_rate=="30") {
+    return("30")
+  } else if (env_chg_rate=="300") {
+    return("300")
+  } else if (env_chg_rate=="3000") {
+    return("3000")
+  } else {
+    return("unknown")
+  }
+}
+get_env_type_label <- function(env_type) {
+  if (env_type=="consta" || env_type=="constb") {
+    return("const")
+  } else if (env_type=="cycling") {
+    return("cycling")
+  } else if (env_type=="random") {
+    return("random")
+  }
+}
+ls1_run_summary_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls1_run_summary_data$env_chg_rate,
+  ls1_run_summary_data$env_type
+)
+ls1_run_summary_data$env_chg_rate_label <- factor(
+  ls1_run_summary_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls1_run_summary_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls1_run_summary_data$env_type
+)
 ```
 
 Load 1-step task co-occurrence data.
@@ -70,6 +114,26 @@ ls1_cooccur_data$task_1_id <- as.factor(
 ls1_cooccur_data$task_2_id <- as.factor(
   ls1_cooccur_data$task_2_id
 )
+
+ls1_cooccur_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls1_cooccur_data$env_chg_rate,
+  ls1_cooccur_data$env_type
+)
+ls1_cooccur_data$env_chg_rate_label <- factor(
+  ls1_cooccur_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls1_cooccur_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls1_cooccur_data$env_type
+)
 ```
 
 Load 2-step landscape data
@@ -87,6 +151,26 @@ ls2_run_summary_data$env_condition <- as.factor(
   ls2_run_summary_data$env_condition
 )
 ls2_run_summary_data$env_type <- as.factor(
+  ls2_run_summary_data$env_type
+)
+
+ls2_run_summary_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls2_run_summary_data$env_chg_rate,
+  ls2_run_summary_data$env_type
+)
+ls2_run_summary_data$env_chg_rate_label <- factor(
+  ls2_run_summary_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls2_run_summary_data$env_type_label <- mapply(
+  get_env_type_label,
   ls2_run_summary_data$env_type
 )
 ```
@@ -114,6 +198,60 @@ ls2_cooccur_data$task_1_id <- as.factor(
 ls2_cooccur_data$task_2_id <- as.factor(
   ls2_cooccur_data$task_2_id
 )
+
+ls2_cooccur_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls2_cooccur_data$env_chg_rate,
+  ls2_cooccur_data$env_type
+)
+ls2_cooccur_data$env_chg_rate_label <- factor(
+  ls2_cooccur_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls2_cooccur_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls2_cooccur_data$env_type
+)
+```
+
+Load run summary data
+
+```{r}
+summary_data_loc <- paste0(working_directory, "data/aggregate.csv")
+summary_data <- read.csv(summary_data_loc, na.strings="NONE")
+
+summary_data$COPY_MUT_PROB <- as.factor(
+  summary_data$COPY_MUT_PROB
+)
+summary_data$env_chg_rate <- as.factor(
+  summary_data$env_chg_rate
+)
+summary_data$env_condition <- as.factor(
+  summary_data$env_condition
+)
+summary_data$env_type <- as.factor(
+  summary_data$env_type
+)
+
+# Add final mutation rate to landscape summary data
+get_final_mut_rate <- function(seed) {
+  filtered_data <- filter(summary_data, RANDOM_SEED==seed)
+  return(filtered_data$final_average_copy_mutation_rate)
+}
+ls1_run_summary_data$final_average_copy_mutation_rate <- mapply(
+  get_final_mut_rate,
+  ls1_run_summary_data$RANDOM_SEED
+)
+ls2_run_summary_data$final_average_copy_mutation_rate <- mapply(
+  get_final_mut_rate,
+  ls2_run_summary_data$RANDOM_SEED
+)
 ```
 
 Miscellaneous setup.
@@ -137,7 +275,7 @@ dir.create(plot_directory, showWarnings=FALSE)
 ggplot(
     ls1_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=prop_viable,
       fill=env_condition
     )
@@ -164,17 +302,18 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    # axis.text.x = element_text(angle = 90),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "prob-viable-one-step-mutants.pdf")
+  paste0(working_directory, "plots/", "prop_viable_mutants_step-1.pdf")
 )
 ```
 
@@ -184,7 +323,7 @@ ggsave(
 ggplot(
     ls2_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=prop_viable,
       fill=env_condition
     )
@@ -211,17 +350,18 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    # axis.text.x = element_text(angle = 90),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "prob-viable-two-step-mutants.pdf")
+  paste0(working_directory, "plots/", "prop_viable_mutants_step-2.pdf")
 )
 ```
 
@@ -233,7 +373,7 @@ ggsave(
 ggplot(
     ls1_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=num_unique_viable_phenotypes,
       fill=env_condition
     )
@@ -260,17 +400,17 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "num-phenotypes-one-step-mutants.pdf")
+  paste0(working_directory, "plots/", "num_unique_viable_phenotypes_step-1.pdf")
 )
 ```
 
@@ -280,7 +420,7 @@ ggsave(
 ggplot(
     ls2_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=num_unique_viable_phenotypes,
       fill=env_condition
     )
@@ -307,17 +447,17 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
-
 ggsave(
-  paste0(working_directory, "plots/", "num-phenotypes-two-step-mutants.pdf")
+  paste0(working_directory, "plots/", "num_unique_viable_phenotypes_step-2.pdf")
 )
 ```
 
@@ -329,7 +469,7 @@ ggsave(
 ggplot(
     ls1_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=entropy_viable_phenotypes,
       fill=env_condition
     )
@@ -356,17 +496,18 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "entropy-phenotypes-one-step-mutants.pdf")
+  paste0(working_directory, "plots/", "entropy_viable_phenotypes_step-1.pdf")
 )
 ```
 
@@ -376,7 +517,7 @@ ggsave(
 ggplot(
     ls2_run_summary_data,
     aes(
-      x=env_condition,
+      x=env_chg_rate_label,
       y=entropy_viable_phenotypes,
       fill=env_condition
     )
@@ -403,37 +544,728 @@ ggplot(
   scale_color_brewer(
     palette=cb_palette
   ) +
-  facet_wrap(
-    ~COPY_MUT_PROB
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
   ) +
   theme(
     legend.position="none",
-    axis.text.x = element_text(angle = 90),
-    panel.border = element_rect(color = "grey", fill=NA, size=2)
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
   )
 
 ggsave(
-  paste0(working_directory, "plots/", "entropy-phenotypes-two-step-mutants.pdf")
+  paste0(working_directory, "plots/", "entropy_viable_phenotypes_step-2.pdf")
 )
 ```
 
-## Co-occurrence matrices
+## Average distance to ancestor
 
 ### 1-step mutants
 
 ```{r}
 ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_dist_to_ancestor,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_dist_to_ancestor_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_dist_to_ancestor,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_dist_to_ancestor_step-2.pdf")
+)
+```
+
+## Number of viable mutants that gain tasks
+
+## 1-step mutants
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_gain_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_gain_tasks_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_gain_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_gain_tasks_step-2.pdf")
+)
+```
+
+## Number of viable mutants that lose tasks
+
+## 1-step mutants
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_lose_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_tasks_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_lose_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_tasks_step-2.pdf")
+)
+```
+
+## num_viable_mutants_lose_multiple_tasks
+
+### 1-step mutants
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_lose_multiple_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_multiple_tasks_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_lose_multiple_tasks,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_lose_multiple_tasks_step-2.pdf")
+)
+```
+
+## Average number of tasks lost
+
+(when tasks are lost)
+
+### 1-step mutants
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_num_tasks_lost,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_num_tasks_lost_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=avg_num_tasks_lost,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "avg_num_tasks_lost_step-2.pdf")
+)
+```
+
+## Total NPMI
+
+total_npmi
+
+### 1-step mutants
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=total_npmi,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "total_npmi_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=total_npmi,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "total_npmi_step-2.pdf")
+)
+```
+
+## Total unexpected NPMI
+
+```{r}
+ggplot(
+    ls1_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=unexpected_npmi,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "unexpected_npmi_step-1.pdf")
+)
+```
+
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=unexpected_npmi,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "unexpected_npmi_step-2.pdf")
+)
+```
+
+## Total expected NPMI
+
+## Pointwise mutual information matrices
+
+### 1-step mutants
+
+```{r}
+# limit <- max(abs(ls1_cooccur_data$npmi_avg)) * c(-1, 1),
+ggplot(
     ls1_cooccur_data,
     aes(
       x=task_1_id,
       y=task_2_id,
-      fill=cooccur_expectation_avg
+      fill=npmi_avg
     )
   ) +
   geom_tile() +
   scale_fill_distiller(
-    palette = "RdBu"
-    # limits=c(-10, 10)
+    palette = "RdBu",
+    limits=c(-1.0, 1.0),
+    breaks=c(-1, -0.5, 0.0, 0.5, 1.0)
   ) +
   facet_grid(
     env_condition~COPY_MUT_PROB
@@ -441,10 +1273,11 @@ ggplot(
   ggtitle("One-step Mutants") +
   theme(
     legend.position="bottom",
-    strip.text.y=element_text(size=10)
+    strip.text.y=element_text(size=10),
+    legend.key.width=unit(3, "cm")
   )
 ggsave(
-  paste0(working_directory, "plots/", "matrices_step-1.pdf"),
+  paste0(working_directory, "plots/", "npmi_matrices_step-1.pdf"),
   height=15,
   width=12
 )
@@ -453,20 +1286,20 @@ ggsave(
 ### 2-step mutants
 
 ```{r}
-limit <- max(abs(ls2_cooccur_data$cooccur_expectation_avg)) * c(-1, 1)
+# limit <- max(abs(ls2_cooccur_data$npmi_avg)) * c(-1, 1),
 ggplot(
     ls2_cooccur_data,
     aes(
       x=task_1_id,
       y=task_2_id,
-      fill=cooccur_expectation_avg
+      fill=npmi_avg
     )
   ) +
   geom_tile() +
   scale_fill_distiller(
     palette = "RdBu",
-    limits=limit
-    # limits=c(-10, 10)
+    limits=c(-1.0, 1.0),
+    breaks=c(-1, -0.5, 0.0, 0.5, 1.0)
   ) +
   facet_grid(
     env_condition~COPY_MUT_PROB
@@ -478,7 +1311,7 @@ ggplot(
     legend.key.width=unit(3, "cm")
   )
 ggsave(
-  paste0(working_directory, "plots/", "matrices_step-2.pdf"),
+  paste0(working_directory, "plots/", "npmi_matrices_step-2.pdf"),
   height=15,
   width=12
 )
